[gd_scene load_steps=2 format=3 uid="uid://dki03uh4xyao2"]

[ext_resource type="Script" uid="uid://btqt1memr8e8r" path="res://scripts/chat_entry_script.gd" id="1_pe7r3"]

[node name="chat_entry" type="PanelContainer"]
custom_minimum_size = Vector2(20, 20)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -672.0
grow_horizontal = 2
script = ExtResource("1_pe7r3")

[node name="margin_container" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="data_container" type="VBoxContainer" parent="margin_container"]
layout_mode = 2

[node name="chat_title_label" type="Label" parent="margin_container/data_container"]
layout_mode = 2
text = "Username"

[node name="meta_data_container" type="HBoxContainer" parent="margin_container/data_container"]
layout_mode = 2

[node name="last_message_label" type="Label" parent="margin_container/data_container/meta_data_container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
text = "Last_message"
clip_text = true
text_overrun_behavior = 3
max_lines_visible = 1

[node name="last_timestamp_label" type="Label" parent="margin_container/data_container/meta_data_container"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 1
theme_override_font_sizes/font_size = 12
text = "12:12:12:12"

[node name="chat_interactor" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[connection signal="pressed" from="chat_interactor" to="." method="on_chat_interactor_pressed"]
